--- a/Proyecto Final/CSS/registro.css
+++ b/Proyecto Final/CSS/registro.css
@@ -43,3 +43,13 @@ body {
     font-size: 16px;
     border-radius: 3px;
   }
+  #background{
+    position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        opacity: 0.9;
+        z-index: -1;
+  }
