--- a/Proyecto Final/CSS/register.css
+++ b/Proyecto Final/CSS/register.css
@@ -53,3 +53,10 @@ body {
         opacity: 0.9;
         z-index: -1;
   }
+  #return {
+    position: absolute;
+    top: 13.4%;
+    width: 5%;
+    height: 5%;
+    left:  65%;
+  }
